For testing purposes, pass from and to dates

--- a/TootAnalyticsEmailer/TootAnalyticsEmailer/Properties/launchSettings.json
+++ b/TootAnalyticsEmailer/TootAnalyticsEmailer/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "TootAnalyticsEmailer": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "--from 1900-01-01 --to 2023-12-31"
     }
   }
 }
