--- a/TootAnalyticsEmailer/TootAnalyticsEmailer/TootAnalyticsEmailer.csproj
+++ b/TootAnalyticsEmailer/TootAnalyticsEmailer/TootAnalyticsEmailer.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="email-template.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
