--- a/TootAnalyticsEmailer/TootAnalyticsEmailer/TootAnalyticsEmailer.csproj
+++ b/TootAnalyticsEmailer/TootAnalyticsEmailer/TootAnalyticsEmailer.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
